# melting-pot

./: .gitignore  README.md
account/: .gitignore  Makefile  README.md  package-lock.json  package.json  tsconfig.json  tslint.json
account/src/: app.ts  clients.ts  controllers.ts  db.ts  decorators.ts  models.ts  services.ts  swagger.json
card/: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  docker-compose.yaml
card/migrations/2020-11-08-160038_create_cards_table/: up.sql
card/src/: clients.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  services.rs  workers.rs
card/src/clients/: event_store.rs  mod.rs  stan.rs
event-store/: Cargo.toml  README.md  build.rs  docker-compose.yaml
event-store/migrations/2020-11-15-080317_create_events/: up.sql
event-store/src/: db.rs  procedures.rs  server.rs  services.rs
promotion/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  clients.hpp  docker-compose.yaml  handlers.hpp  install-dependencies.sh  main.cpp  services.hpp  workers.hpp
promotion/clients/: event-store.hpp  stan.hpp
proto/event_store/: event_store.proto  go.mod
user/: Makefile  README.md  docker-compose.yaml  package-lock.json  package.json
user/src/: app.ts  clients.ts  controllers.ts  db.ts  decorators.ts  interfaces.ts  models.ts  router.ts  services.ts  swagger.json  workers.ts
wallet/: Makefile  README.md  docker-compose.yaml  go.mod  go.sum  main.go
wallet/cmd/app/: main.go
wallet/internal/: handler.go  router.go  server.go
wallet/internal/clients/: clients.go  stan.go
wallet/internal/db/: postgres.go
wallet/internal/models/: wallet.go
wallet/internal/services/: wallet.go
wallet/internal/workers/: stan.go
wallet/migrations/: 000001_create_wallets_table.up.sql
