[package]
name = "card"
version = "0.1.0"
authors = ["Sean Wong <wotzhs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "postgres_pool"]
