[package]
name = "card"
version = "0.1.0"
authors = ["Sean Wong <wotzhs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.5", features = ["serde", "v4"] }
chrono = "0.4"
postgres = { version = "0.15", features = ["with-uuid", "with-chrono" ] }
rand = "0.7.3"
grpcio = "0.7.0"
protobuf = "2.18.0"
futures = "0.3.8"
ratsio = "0.3.0-alpha.6"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "postgres_pool"]
