[package]
name = "event-store"
version = "0.1.0"
authors = ["Sean Wong <wotzhs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eventstore-server"
path = "src/server.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = {version = "0.2", features = ["macros"]}
tokio-postgres = {version = "0.5.0", features = ["with-serde_json-1"]}
bb8 = "0.4.2"
bb8-postgres = "0.4.0"
ulid = "0.4.1"
serde_json = "1.0.59"
ratsio = "0.3.0-alpha.6"

[build-dependencies]
tonic-build = "0.3"
